my profile page v3

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="card-white" id="container">
       <h1>Hello, I am Manuel</h1>
       <img src="/profile/images/georgi.jpg" class="img-circle" alt="georgi" style="height: 200px; width: 200px;">
-      <p>I love Github, UX/UI Design, web-development and motorbikes 🏍️. I launched Le Wagon to teach code to entrepreneurs and creative people around the world 🌍</p>
-      <a href="#" class="btn-blue" >Discover Le Wagon</a>
+      <p>I am dedicated to study software development with a strong interest in coding and technology. Outside of my studies, I am passionate about animals and enjoy spending time with pets 🐱 🐶 🦜. In my free time, I like to unwind by watching series, diving into different stories and genres</p>
+      <a href="#" class="btn-blue" >Contact me</a>
     </div>
     <div class="card-white" id="container">
       <h2>Follow me</h2>
